--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
 	<title>React Smart Guides</title>
+	<style>
+		html, body {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+	</style>
 </head>
 <body>
 	<div id="root"></div>
